--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Muli:300,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <title>Eura7 ZR</title>
+    <title>Photo-san</title>
 </head>
 
 <body>
